Fetch movie from API and Add to DB

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    {% from 'bootstrap5/form.html' import render_form %}
     {% block styles %}
     {{ bootstrap.load_css() }}
     <!-- Link to the styles.css here to apply styling to all the child templates.-->
