--- a/templates/select.html
+++ b/templates/select.html
@@ -5,9 +5,11 @@
 {% block content %}
 <div class="container">
     <h1 class="heading">Select Movie</h1>
-  <p>
-    <a href="#"> MOVIE TITLE - MOVIE RELEASE DATE</a>
-  </p>
+  <ul>
+      {% for movie in movies %}
+           <li><a href="{{url_for('select_movie', movie_id=movie['id'])}}"> {{movie['title']}} - {{movie['release_date']}}</a></li>
+      {%endfor%}
+  </ul>
 
 </div>
 {% endblock %}
